--- a/ai.yml
+++ b/ai.yml
@@ -9,5 +9,6 @@ rules:
     @person. I will now call you {upper ?0}."
   call yourself !0 * | your name is now !0 *: "::name={upper ?0}:: Okay, I am now called {upper ?0}"
   # __load: Hello! # When this line is uncommented, the bot speaks first and says 'Hello!'
+  clear the screen: "!clr! Cleared screen!"
   __exit: Goodbye
   __unknown: "%What|Huh|What do you mean%?"
